# GSDetector

./: .gitignore  README.md  Training_Files.csv  alert-banner.component.html  alert-banner.component.ts  landing-page.component.html  landing-page.component.ts  map.component.css  sidebar.component.ts
datasets/: Training_Files.csv
detection/: Pipfile  audio_queue.ipynb  datasets.py  main.py  models.py  training.py  utils.py
detection/data/example_data/: processed_example.csv
detection/data/spectrograms/: norm_stats.csv
detection/example_data/: cadre_processed.pt  processed.pt
detection/example_data/negative/: 0_campus0.pt  0_esc0.pt  0_urban0.pt
detection/example_data/positive/: 1_cadre0.pt  1_kaggle0.pt  1_ncbi0.pt  1_urban0.pt
detection/models/: enhanced.py  resnet.py  simple.py
detection/models/trained_models/onnx/: SimpleCNN.onnx
detection/preprocessing/: dataloaders.py  datasets.py  utils.py
detection/runs/SimpleCNN_2024-05-02_11-34-14/: events.out.tfevents.1714664054.ScottsMacStudio.68725.0
detection/runs/SimpleCNN_2024-05-02_11-34-14/1714664223.10706/: events.out.tfevents.1714664223.ScottsMacStudio.68725.1
detection/runs/SimpleCNN_2024-05-02_11-40-58/: events.out.tfevents.1714664458.ScottsMacStudio.69033.0
detection/runs/SimpleCNN_2024-05-02_11-42-46/: events.out.tfevents.1714664566.ScottsMacStudio.69148.0
detection/runs/SimpleCNN_2024-05-02_11-42-46/1714664606.4075232/: events.out.tfevents.1714664606.ScottsMacStudio.69148.1
detection/runs/SimpleCNN_2024-05-02_11-51-24/: events.out.tfevents.1714665084.ScottsMacStudio.69518.0
detection/runs/SimpleCNN_2024-05-02_11-51-24/1714665121.93451/: events.out.tfevents.1714665121.ScottsMacStudio.69518.1
detection/runs/SimpleCNN_2024-05-02_11-56-17/: events.out.tfevents.1714665377.ScottsMacStudio.69739.0
detection/runs/SimpleCNN_2024-05-02_11-56-17/1714665415.08834/: events.out.tfevents.1714665415.ScottsMacStudio.69739.1
detection/runs/SimpleCNN_2024-05-02_12-11-48/: events.out.tfevents.1714666308.ScottsMacStudio.70108.0
detection/runs/SimpleCNN_2024-05-02_12-11-48/1714667349.5252092/: events.out.tfevents.1714667349.ScottsMacStudio.70108.1
detection/runs/SimplePipeline_2024-05-02_13-22-56/: events.out.tfevents.1714670576.ScottsMacStudio.73193.0
detection/runs/SimplePipeline_2024-05-02_13-24-43/: events.out.tfevents.1714670683.ScottsMacStudio.73295.0
detection/runs/SimplePipeline_2024-05-02_13-28-40/: events.out.tfevents.1714670920.ScottsMacStudio.73436.0
detection/runs/SimplePipeline_2024-05-02_13-30-42/: events.out.tfevents.1714671042.ScottsMacStudio.73564.0
detection/runs/SimplePipeline_2024-05-02_13-30-42/1714671100.114274/: events.out.tfevents.1714671100.ScottsMacStudio.73564.1
detection/trained_models/compiled/: EnhancedCNN.ptc  SimpleCNN.ptc
detection/trained_models/onnx/: EnhancedCNN.onnx  SimpleCNN.onnx
detection/trained_models/pickle/: EnhancedCNN.pt  SimpleCNN.pt
detection/traineval/: evaluation.py  export.py  training.py
gsDetect/: pyvenv.cfg
gsDetect/Scripts/: activate  activate.bat
gsDetect/src/: AuxWave.py
rtp/: AuxRTP.cpp  AuxRTP.h  AuxWave.h  CMakeLists.txt  main.cpp
rtp/client/: AuxAudioQueue.cpp  AuxAudioQueue.h  AuxRTP.cpp  AuxRTP.h  AuxWave.cpp  AuxWave.h  CMakeLists.txt  Utility.h  main.cpp
rtp/server/: AuxAudioQueue.cpp  AuxRTP.cpp  AuxRTP.h  AuxSpectral.h  CMakeLists.txt  main.cpp
rtp/src/: AuxAudioQueue.cpp  AuxAudioQueue.h  AuxRTP.cpp  AuxRTP.h  AuxSpectral.h  AuxWave.cpp  CMakeLists.txt  main.cpp
ui/: map.component.html  map.component.ts  sidebar.component.html
